--- a/public_html/milestone.html
+++ b/public_html/milestone.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Milestone-2</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
